--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="diesel, fuel, log, app, petrol, ⛽️, 🛢️, 🚚, 🔋" />
     <meta name="theme-color" content="#2d2d2d" />
     <meta name="viewport" content="width=device-width, ixnitial-scale=1.0" />
-    <title>Marbu - Diesel Log App</title>
+    <title>Diesel Pmv</title>
   </head>
   <body>
     <div id="root"></div>
